--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "astro preview"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.9",
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^9.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "astro": "^5.15.3",
-    "tailwindcss": "^3.4.17",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "tailwind-merge": "3.3.1",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
-    "typescript": "^5.0.0",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "typescript": "^5.0.0"
   }
 }
